<resources>

    <string name="app_name">Three Wishes</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Three Wishes</string>
    <string name="item_picture_description">Foto do item desejado</string>
    <string name="product_name">Nome do Produto</string>
    <string name="product_location_gps">Local (usando GPS)</string>
    <string name="category">Categoria</string>
    <string name="search">Pesquisar</string>
    <string name="contact">Contato</string>
    <string name="external_site_buscape">Buscapé</string>
    <string name="min_price">Preço Mínimo</string>
    <string name="max_price">Preço Máximo</string>
    <string name="notify_price">Notificar Preço</string>
    <string name="save">Salvar</string>
    <string name="menu_save">Salvar</string>
    <string name="item_description">Descrição do Item</string>
    <string name="null_item_edit">O ID informado não corresponde a um item existente</string>
    <string name="menu_new">Novo</string>
    <string name="debug_newitem_attach_activity">Anexando form de cadastro à Activity</string>
    <string name="debug_itemlist_attach_activity">Anexando lista de itens à Activity</string>
    <string name="debug_json_communication">Iniciando comunicação JSON</string>
    <string name="debug_item_edit">Editando item</string>
    <string name="menu_cancel">Cancelar</string>
    <string name="notification_price_change">O valor atual de %1s foi alterado para $2d.</string>
    <string name="menu_edit">Editar</string>
    <string name="menu_delete">Excluir</string>
    <string name="menu_checkprice">Consultar Preço</string>
    <string name="consulta_preco_service">Serviço de Consulta de Preços</string>

</resources>